--- a/css/test1_.css
+++ b/css/test1_.css
@@ -331,6 +331,12 @@ h2 {
   height: 100% !important;
 }
 
+/* Hide any Wowhead-injected icons in talent links */
+.talent-icon .wowhead-icon,
+.talent-icon ins {
+  display: none !important;
+}
+
 .talent-percent {
   position: absolute;
   bottom: 0;
