--- a/css/test1_.css
+++ b/css/test1_.css
@@ -424,4 +424,9 @@ h2 {
     width: 48px;
     height: 48px;
   }
+
+    /* Prevent Wowhead background-image on talent icons */
+  .talent-icon {
+    background-image: none !important;
+  }
 }
